# maas-api-v3

./: Makefile  pyproject.toml  tox.ini
maas/: main.py
maas/api/: base.py
maas/api/v1/: __init__.py  fabrics.py  machines.py  root.py  spaces.py  zones.py
maas/api/v1/schemas/requests/: fabrics.py  machines.py  spaces.py  zones.py
maas/api/v1/schemas/responses/: base.py  fabrics.py  machines.py  pagination.py  spaces.py  zones.py
maas/api/v2/: __init__.py  root.py
